--- a/src/examples/emi-flow-editor/emi-flow-editor.scss
+++ b/src/examples/emi-flow-editor/emi-flow-editor.scss
@@ -15,14 +15,16 @@
 */
 
 #bwdl-editable-graph {
-  display: grid;
-  grid-template:
-  "text-editor graph-editor node-editor" min-content;
-  grid-gap: 3px;
   height: 93vh;
 }
 
+#bwdl-editor {
+  position: absolute;  
+}
+
 #editorBottomBar {
+  position: absolute;
+  right: 5;
   display: flex;
   flex-shrink: 0;
   flex-grow: 0;
@@ -60,10 +62,12 @@
   position: absolute;
 }
 
+.right-pane {
+  background-color: #2f302a;
+}
+
 .rightMainEditor {
   overflow-y: scroll;
-  height: 89vh;
-  min-width: 28vw;
 }
 
 .rightEditor {
@@ -108,7 +112,6 @@
 }
 
 #rightBar {
-  grid-area: node-editor;
   background-color: #2f3029;
   padding: 10px;
 }
