--- a/src/examples/emi-flow-editor/emi-flow-editor.scss
+++ b/src/examples/emi-flow-editor/emi-flow-editor.scss
@@ -186,6 +186,10 @@
   background-color: #e5ddd5;
 }
 
+.messageContainer {
+  background: transparent;
+}
+
 .chatMessage {
   color: black;
   border: none;
