publish module complete. loadingAlert added for publish, turnIntoModule, and flowRename

--- a/src/examples/emi-flow-editor/emi-flow-editor.scss
+++ b/src/examples/emi-flow-editor/emi-flow-editor.scss
@@ -431,3 +431,13 @@ label {
     font-size: x-small;
   }
 }
+
+.loadingAlert {
+  h1 {
+    text-align: center;
+  }
+
+  Loader {
+    text-align: center;
+  }
+}
