--- a/src/examples/emi-flow-editor/emi-flow-editor.scss
+++ b/src/examples/emi-flow-editor/emi-flow-editor.scss
@@ -14,10 +14,6 @@
   limitations under the License.
 */
 
-#bwdl-editable-graph {
-  height: 93vh;
-}
-
 #bwdl-editor {
   position: absolute;  
 }
@@ -60,6 +56,7 @@
 
 .layout-engine {
   position: absolute;
+  padding: 15px;
 }
 
 .right-pane {
