layout engine css

--- a/src/examples/emi-flow-editor/emi-flow-editor.scss
+++ b/src/examples/emi-flow-editor/emi-flow-editor.scss
@@ -56,7 +56,7 @@
 
 .layout-engine {
   position: absolute;
-  left: 300px;
+  left: 40%;
   background: white;
   margin: 10px;
   border: lightgray solid 1px;
