module folder selector on management bar is now refreshing

--- a/src/examples/app.scss
+++ b/src/examples/app.scss
@@ -39,6 +39,7 @@ button {
 .app-header {
   border-bottom: 1px solid black;
   background: #f9f9f9;
+  z-index: 1000;
 
   > nav {
     height: 25px;
