flow management bar module libs support complete

--- a/src/examples/emi-flow-editor/emi-flow-editor.scss
+++ b/src/examples/emi-flow-editor/emi-flow-editor.scss
@@ -464,3 +464,9 @@ label {
   display: inherit;
   align-items: center;
 }
+
+.moduleName {
+  align-self: center;
+  background: gold;
+  border-radius: 10px;
+}
