flow management bar display name improved

--- a/src/examples/emi-flow-editor/emi-flow-editor.scss
+++ b/src/examples/emi-flow-editor/emi-flow-editor.scss
@@ -470,3 +470,9 @@ label {
   background: gold;
   border-radius: 10px;
 }
+
+.flowTag {
+  padding: 3px;
+  border-radius: 5px;
+  background: orange;
+}
