flow management bar input nanme styling is now really cool

--- a/src/examples/emi-flow-editor/emi-flow-editor.scss
+++ b/src/examples/emi-flow-editor/emi-flow-editor.scss
@@ -476,3 +476,14 @@ label {
   border-radius: 5px;
   background: orange;
 }
+
+.barModuleVersion {
+  font-style: italic;
+}
+
+.moduleLibBarIcon {
+  padding: 3px;
+  height: 30px;
+  background: gold;
+  border-radius: 5px;
+}
