better visualization for long named intents

--- a/src/examples/emi-flow-editor/emi-flow-editor.scss
+++ b/src/examples/emi-flow-editor/emi-flow-editor.scss
@@ -176,9 +176,9 @@
     margin: 0px;
     padding: 0px;
 
-    > .selectContainer {
-      width: 180px;
-      margin: 0px;
+    > .selectLongContainer {
+      margin: 5px;
+      width: 300px;
     }
 
     > .selectShortContainer {
