context vars actions - very advanced

--- a/src/examples/emi-flow-editor/emi-flow-editor.scss
+++ b/src/examples/emi-flow-editor/emi-flow-editor.scss
@@ -76,7 +76,7 @@
   display: flex;
   flex-direction: column;
 
-  label {
+  label, .labelLikeDiv {
     padding: 5px;
   }
 
@@ -101,7 +101,7 @@
     flex-direction: column;
   }
 
-  label {
+  label, .labelLikeDiv {
     flex-grow: 0;
     display: flex;
 
@@ -146,7 +146,7 @@
   display: flex;
   align-items: center;
 
-  > label {
+  > label, .labelLikeDiv {
     border: 1px solid lightpink;
   }
 }
@@ -159,12 +159,14 @@
 .stagingFilters {
   display: flex;
   flex-direction: column;
-  > label {
+  > label, .labelLikeDiv {
     display: flex;
   }
 }
 
 .filterItem {
+  border: 1px solid dimgray;
+  border-radius: 5px;
   display: flex;
   align-items: center;
 
@@ -172,7 +174,7 @@
     flex: 1;
   }
 
-  > label {
+  > label, .labelLikeDiv {
     margin: 0px;
     padding: 0px;
 
@@ -219,7 +221,7 @@
 .stagingContext {
   display: flex;
   flex-direction: column;
-  > label {
+  > label, .labelLikeDiv {
     display: flex;
   }
 }
@@ -229,7 +231,7 @@
   align-items: center;
 }
 
-label {
+label, .labelLikeDiv {
   align-items: center;
   border: 1px solid grey;
   border-radius: 5px;
@@ -325,7 +327,7 @@ label {
   color: aqua;
 }
 
-.vertical-label {
+.vertical-label, .labelLikeDiv {
   flex-grow: 0;
   flex-direction: column;
   align-items: baseline;
