UI support for context vars actions and discovery of those context vars in edges and modules

--- a/src/examples/emi-flow-editor/emi-flow-editor.scss
+++ b/src/examples/emi-flow-editor/emi-flow-editor.scss
@@ -169,6 +169,9 @@
   border-radius: 5px;
   display: flex;
   align-items: center;
+  background: slategray;
+  margin-top: 5px;
+  margin-bottom: 5px;
 
   > input, span {
     flex: 1;
